Always return a registry